# obfuscator-llvm

./: BogusControlFlow.cpp  CMakeLists.txt  Dummy.cpp  Flattening.cpp  Plugin.cpp  README.md  Substitution.cpp
.github/workflows/: test.yaml
bogus/: BogusControlFlow.cpp  BogusControlFlow.h  CMakeLists.txt
docs/: ANDROID_NDK.md
flattening/: CMakeLists.txt  Flattening.cpp  Flattening.h
split/: CMakeLists.txt  SplitBasicBlocks.cpp  SplitBasicBlocks.h
string/: CMakeLists.txt  StringObfuscation.cpp  StringObfuscation.h  decode.c  generate_ir_header.sh
substitution/: CMakeLists.txt  Substitution.cpp  Substitution.h
utils/: CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.h  Utils.cpp  Utils.h
